<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.guo.yangzong.foodsafetyscanner.MainFragment"
    android:background="@drawable/food">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_button"
        android:text="@string/text_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:layout_margin="8dp"
        android:background="@drawable/roundedbutton"
        android:textAllCaps="false"/>
    <Button
        android:id ="@+id/scan_button"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:text="@string/scan_text"
        android:textSize="48sp"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="75dp"
        android:textColor="@color/colorWhite"
        android:nextFocusDown="@id/avoid_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/avoid_button"
        android:text="@string/avoid_button"
        android:textSize="18sp"
        android:background="@color/colorBlue"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorWhite"
        android:nextFocusUp="@id/scan_button"/>
</RelativeLayout>
