<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.guo.yangzong.foodsafetyscanner.CreateFragment"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergy_label"
        android:id="@+id/allergy_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:nextFocusDown="@+id/severity_label"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/allergy_name"
        android:layout_toEndOf="@id/allergy_label"
        android:layout_alignBaseline="@id/allergy_label"
        android:nextFocusDown="@+id/severity_label"
        android:nextFocusUp="@+id/allergy_label"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/severity_label"
        android:text="@string/severity_label"
        android:layout_below="@id/allergy_label"
        android:layout_marginTop="24sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:nextFocusDown="@+id/ingredient"
        android:nextFocusUp="@+id/allergy_label"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/severity"
        android:layout_toEndOf="@+id/severity_label"
        android:layout_alignTop="@+id/severity_label"
        android:nextFocusUp="@+id/allergy_name"
        android:nextFocusDown="@+id/ingredient"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredient"
        android:layout_below="@+id/severity_label"
        android:layout_toLeftOf="@+id/ingredient_button"
        android:layout_marginTop="18sp"
        android:nextFocusUp="@+id/severity_label"
        android:nextFocusDown="@+id/ingredient_list"/>
    <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/ingredient_button"
       android:text="@string/ingredient_button"
       android:layout_alignBottom="@+id/ingredient"
       android:layout_alignParentEnd="true"
       android:backgroundTint="@color/colorBlue"
       android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:nextFocusUp="@+id/severity_label"
        android:nextFocusDown="@+id/ingredient_list"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:src="@drawable/dotted"
        android:id="@+id/line"
        android:layerType="software"
        android:layout_below="@+id/ingredient_button"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredient_list"
        android:layout_below="@+id/line"
        android:layout_above="@+id/buttons"
        android:nextFocusUp="@+id/ingredient_text"
        android:nextFocusDown="@+id/save_button"/>
    <TextView
        android:id="@+id/empty_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/empty_ingredient"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="16dp"
        android:fontFamily="sans-serif-light">
    </TextView>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button"
            android:backgroundTint="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:nextFocusUp="@+id/ingredient_list">
        </Button>
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"
            android:backgroundTint="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:nextFocusUp="@+id/ingredient_list">
        </Button>
    </LinearLayout>
</RelativeLayout>
