<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.guo.yangzong.foodsafetyscanner.ListFragment"
    android:padding="12dp">
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/button_add"
        android:src="@drawable/add_blue"
        android:scaleType="fitCenter"
        android:background="@null"
        android:contentDescription="@string/add_description"
        android:nextFocusDown="@+id/avoid_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/button_add"
        android:id="@+id/ingredient_text"
        android:layout_alignBottom="@+id/button_add"
        android:nextFocusDown="@+id/avoid_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/avoid_text"
        android:text="@string/avoid_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/ingredient_text"
        android:layout_centerHorizontal="true"
        android:nextFocusDown="@+id/ingredient_list"
        android:nextFocusUp="@+id/ingredient_text"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/ingredient_list"
        android:layout_below="@+id/avoid_text"
        android:nextFocusDown="@+id/filter_button"
        android:nextFocusUp="@+id/avoid_text"/>
    <TextView
        android:id="@+id/empty_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/empty_list"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="16dp"
        android:fontFamily="sans-serif-light">
    </TextView>
    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/filter_button"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:text="@string/filter_text"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:textColor="@color/colorWhite"-->
        <!--android:background="@color/colorBlue"-->
        <!--android:nextFocusUp="@+id/ingredient_text"/>-->

</RelativeLayout>
